--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.19.1",
     "input-otp": "1.4.1",
