--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "init:db": "tsx scripts/init-db.ts",
     "init:redis": "tsx scripts/init-redis.ts",
     "migrate": "tsx scripts/run-migration.ts",
+    "migrate:sqlite": "tsx scripts/run-sqlite-migration.ts",
     "test:redis": "tsx scripts/test-redis.ts"
   },
   "dependencies": {
@@ -84,9 +86,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.15.33",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "better-sqlite3": "^12.1.1",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
