--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
@@ -93,6 +94,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "better-sqlite3": "^12.1.1",
+    "drizzle-kit": "^0.31.4",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
