--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "ui": "git+https://github.com/shadcn/ui.git",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
